Finish removing distance to edge duplicates
Result: first pre-processed file of VRI data intersected with bird stations (SS)

--- a/munge/00.02.MergeVRIIntersectFiles.Rmd
+++ b/munge/00.02.MergeVRIIntersectFiles.Rmd
@@ -263,8 +263,8 @@ kable(rbind(head(alldat.sm[alldat.sm$SS %in% dupSS & alldat.sm$PCODE %in% "CF",]
 
 **CW**
 ``` {r}
-kable(rbind(head(alldat.sm[alldat.sm$SS %in% dupSS & alldat.sm$PCODE %in% "CF",], 10),
-            tail(alldat.sm[alldat.sm$SS %in% dupSS & alldat.sm$PCODE %in% "CF",], 10)), row.names=F)
+kable(rbind(head(alldat.sm[alldat.sm$SS %in% dupSS & alldat.sm$PCODE %in% "CW",], 10),
+            tail(alldat.sm[alldat.sm$SS %in% dupSS & alldat.sm$PCODE %in% "CW",], 10)), row.names=F)
 ```
 
 * CW: Same as for CF and BL2TFL48: stations intersect polygons in Forsite's shapefile that are missing key information, such as SpeciesGroup, resulting in NULL RANK.
@@ -280,7 +280,92 @@ kable(rbind(head(alldat.sm[alldat.sm$SS %in% dupSS & alldat.sm$PCODE %in% "TFL48
 * TFL48VM: Same as for CW, CF, and BL2TFL48: stations intersect polygons in Forsite's shapefile that are missing key information, such as SpeciesGroup, resulting in NULL RANK.
     * ACTION: Choose CanforTFL intersection for these. Identify them by looking for a null value in either SPECIES_CD_1, BEC_ZONE_CODE, PROJ_AGE_1, or PROJ_HEIGHT_1.
 
-### Combine the various datasets and then subset to the rows where we have attributes for all needed columns
+
+### Focus on Distance to Nearest polygon/stand edge
+
+Because we're working with two different VRI shapefiles, some of the point count SSs will have two distances to nearest polygons.. one from the CanforTFL and one from the Forsite "mig birds" VRI file. 
+
+![ ^^^ Image. Example for SS BL2TFL48:Block2:59 and distance to edge to both the CanforTFL layer and the Forsite mig birds layer. NEAR_FID refers to the OBJECT_ID in the polyline shapefile for the VRI shapefiles](../output/DistanceToEdgeExample.jpg)
+
+Here I need to identify those and save only the shortest distance. 
+
+Add layer name to each file 
+
+``` {r}
+atlas$OrigLayer <- "BC_BCCA_SelectedMigLayer"
+bam$OrigLayer <- "BCdatanat4"
+bbs$OrigLayer <- "XYBC_BBS_v3"
+canfortfl$OrigLayer <- "XYBC_Natv4_TFLCanfor"
+canfortflwsi$OrigLayer <- "XY_WSI_TFLCanfor"
+wsi$OrigLayer <- "BAMNATV4BConly"
+
+atlas$VRIintersectLayer <- "Forsite_VRI"
+bam$VRIintersectLayer <- "Forsite_VRI"
+bbs$VRIintersectLayer <- "Forsite_VRI"
+canfortfl$VRIintersectLayer <- "Canfor_TFL_VRI"
+canfortflwsi$VRIintersectLayer <- "Canfor_TFL_VRI"
+wsi$VRIintersectLayer <- "Forsite_VRI"
+
+
+```
+
+Change colnames to standard ones
+``` {r}
+colnames(atlas)[c(2,8)] <- c("FID_BIRD", "FID_VRI")
+colnames(bam)[c(2,15)] <- c("FID_BIRD", "FID_VRI")
+colnames(bbs)[c(2,18)] <- c("FID_BIRD", "FID_VRI")
+colnames(canfortfl)[c(2, 15)] <- c("FID_BIRD", "FID_VRI")
+colnames(canfortflwsi)[c(2,12)] <- c("FID_BIRD", "FID_VRI")
+colnames(wsi)[c(2,12)] <- c("FID_BIRD", "FID_VRI")
+```
+
+``` {r}
+neededcols2 <- c('SS', 'FID_BIRD', 'FID_VRI', 'VRIintersectLayer', "PCODE", "NEAR_FID", "NEAR_DIST")
+  
+alldat.fordisttoedge <- rbind(atlas[neededcols2], bam[neededcols2], bbs[neededcols2], wsi[neededcols2], canfortfl[neededcols2], canfortflwsi[neededcols2])
+```
+
+`r sum(duplicated(alldat.fordisttoedge$SS))` duplicated SSs. 
+
+
+``` {r}
+dupSS <- alldat.fordisttoedge$SS[duplicated(alldat.fordisttoedge$SS)]
+
+alldat.fordisttoedge.nodups <-  alldat.fordisttoedge[!alldat.fordisttoedge$SS %in% dupSS,]
+alldat.fordisttoedge.dups <-  alldat.fordisttoedge[alldat.fordisttoedge$SS %in% dupSS,]
+
+alldat.fordisttoedge.dups <- alldat.fordisttoedge.dups[order(alldat.fordisttoedge.dups$SS, alldat.fordisttoedge.dups$NEAR_DIST, decreasing = T),]
+
+sampleSS <- sample(dupSS, 30)
+
+kable(alldat.fordisttoedge.dups[alldat.fordisttoedge.dups$SS %in% sampleSS,], row.names=F)
+```
+
+``` {r}
+unique(alldat.fordisttoedge.dups$PCODE) # which projects have two distance measurements? 
+```
+
+Only data that fall within the Canfor TFL have duplicate distance to edges. This is because Trish ran distnace to edge for these point counts twice... once as part of the full intersection with the Forsite VRI... and once with just the Canfor TFL. She didn't remove the one set, so they're duplicated. 
+
+This also explains the duplication detected above, and why almost all of the duplicates fell within the Canfor TFL. 
+
+
+Question to self: if I were to isolate the second version of each SS after sorting in decreasing order by distance to edge, would it consistently pull from the correct database (e.g., Canfor = smaller distance)
+
+``` {r}
+test <- alldat.fordisttoedge.dups[alldat.fordisttoedge.dups$SS %in% sampleSS,]
+
+test[duplicated(test$SS),] 
+```
+
+Looks like yes, but maybe I should just cut out the duplicates based on combination of PCODE and the VRI file. This would omit point counts from within the Canfor TFL that were intersected with the Forsite mig birds layer. 
+
+
+### Combine the various datasets 
+
+* Remove Canfor TFL Duplicates
+* Subset to the rows where we have attributes for all needed columns
+
 
 Add blank derived columns to the CanforTFL dataset so that I can include those columns from the Forsite file
 
@@ -306,36 +391,45 @@ canfortflwsi$AT_PERCENT <- NA
 canfortflwsi$Decid_PERCENT <- NA
 ```
 
-Add layer name to each file 
-
 ``` {r}
-atlas$VRIintersectLayer <- "FID_BC_BCCA_SelectedMigLayer"
-bam$VRIintersectLayer <- "FID_BCdatanat4"
-bbs$VRIintersectLayer <- "FID_XYBC_BBS_v3"
-canfortfl$VRIintersectLayer <- "FID_XYBC_Natv4_TFLCanfor"
-canfortflwsi$VRIintersectLayer <- "FID_XY_WSI_TFLCanfor"
-wsi$VRIintersectLayer <- "FID_BAMNATV4BConly"
+neededcols <- c('PCODE', 'SS', 'FID_BIRD', 'FID_VRI', 'VRIintersectLayer', 'MAP_ID', 'POLYGON_ID', 'OPENING_IND', 'INPUT_DATE', 'INTERPRETATION_DATE', 'PROJECT', 'REFERENCE_YEAR', 'ATTRIBUTION_BASE_DATE', 'PROJECTED_DATE', 'BEC_ZONE_CODE', 'BEC_SUBZONE', 'BEC_VARIANT', 'BEC_PHASE', 'EARLIEST_NONLOGGING_DIST_TYPE', 'EARLIEST_NONLOGGING_DIST_DATE', 'STAND_PERCENTAGE_DEAD', 'FREE_TO_GROW_IND', 'HARVEST_DATE', 'INTERPRETED_DATA_SRC_CD', 'CROWN_CLOSURE', 'REFERENCE_DATE',  'VRI_LIVE_STEMS_PER_HA', 'DATA_SRC_VRI_LIVE_STEM_HA_CD', 'VRI_DEAD_STEMS_PER_HA', 'TREE_COVER_PATTERN', 'VERTICAL_COMPLEXITY', 'SPECIES_CD_1', 'SPECIES_PCT_1', 'SPECIES_CD_2', 'SPECIES_PCT_2', 'SPECIES_CD_3', 'SPECIES_PCT_3', 'SPECIES_CD_4', 'SPECIES_PCT_4', 'SPECIES_CD_5', 'SPECIES_PCT_5', 'SPECIES_CD_6', 'SPECIES_PCT_6', 'PROJ_AGE_1', 'PROJ_AGE_CLASS_CD_1', 'PROJ_AGE_2', 'PROJ_AGE_CLASS_CD_2', 'DATA_SOURCE_AGE_CD', 'PROJ_HEIGHT_1', 'PROJ_HEIGHT_CLASS_CD_1', 'PROJ_HEIGHT_2', 'PROJ_HEIGHT_CLASS_CD_2', 'DATA_SOURCE_HEIGHT_CD', 'BecZone', 'SpeciesGroup', 'Age', 'Height', 'Rank', 'FD_PERCENT', 'PL_PERCENT', 'AT_PERCENT', 'Decid_PERCENT', 'NEAR_FID', 'NEAR_DIST')
+
+forsitedat <- rbind(atlas[neededcols], bam[neededcols], bbs[neededcols], wsi[neededcols])
+
+canfordat <- rbind(canfortfl[neededcols], canfortflwsi[neededcols])
 ```
 
-Change colnames to standard ones
+Isolate the replicates/rows I want from the canfordat. Those with PCODES within Canfor TFL and intersecting with Canfor TFL VRI layer. 
+
 ``` {r}
-colnames(atlas)[c(2,8)] <- c("FID_BIRD", "FID_VRI")
-colnames(bam)[c(2,15)] <- c("FID_BIRD", "FID_VRI")
-colnames(bbs)[c(2,18)] <- c("FID_BIRD", "FID_VRI")
-colnames(canfortfl)[c(2, 15)] <- c("FID_BIRD", "FID_VRI")
-colnames(canfortflwsi)[c(2,12)] <- c("FID_BIRD", "FID_VRI")
-colnames(wsi)[c(2,12)] <- c("FID_BIRD", "FID_VRI")
+canfortflpcodes <- c("TFL48VM", "BL2TFL48", "CW", "CF") 
+
+canforwanted <- canfordat[canfordat$VRIintersectLayer == "Canfor_TFL_VRI",]
 ```
 
+Remove the replicates/rows I DON'T want from the forsitedat. Those with PCODES within Canfor TFL and intersecting the Forsite VRI layer.
+
 ``` {r}
-neededcols <- c('SS', 'FID_BIRD', 'FID_VRI', 'VRIintersectLayer', 'MAP_ID', 'POLYGON_ID', 'OPENING_IND', 'INPUT_DATE', 'INTERPRETATION_DATE', 'PROJECT', 'REFERENCE_YEAR', 'ATTRIBUTION_BASE_DATE', 'PROJECTED_DATE', 'BEC_ZONE_CODE', 'BEC_SUBZONE', 'BEC_VARIANT', 'BEC_PHASE', 'EARLIEST_NONLOGGING_DIST_TYPE', 'EARLIEST_NONLOGGING_DIST_DATE', 'STAND_PERCENTAGE_DEAD', 'FREE_TO_GROW_IND', 'HARVEST_DATE', 'INTERPRETED_DATA_SRC_CD', 'CROWN_CLOSURE', 'REFERENCE_DATE',  'VRI_LIVE_STEMS_PER_HA', 'DATA_SRC_VRI_LIVE_STEM_HA_CD', 'VRI_DEAD_STEMS_PER_HA', 'TREE_COVER_PATTERN', 'VERTICAL_COMPLEXITY', 'SPECIES_CD_1', 'SPECIES_PCT_1', 'SPECIES_CD_2', 'SPECIES_PCT_2', 'SPECIES_CD_3', 'SPECIES_PCT_3', 'SPECIES_CD_4', 'SPECIES_PCT_4', 'SPECIES_CD_5', 'SPECIES_PCT_5', 'SPECIES_CD_6', 'SPECIES_PCT_6', 'PROJ_AGE_1', 'PROJ_AGE_CLASS_CD_1', 'PROJ_AGE_2', 'PROJ_AGE_CLASS_CD_2', 'DATA_SOURCE_AGE_CD', 'PROJ_HEIGHT_1', 'PROJ_HEIGHT_CLASS_CD_1', 'PROJ_HEIGHT_2', 'PROJ_HEIGHT_CLASS_CD_2', 'DATA_SOURCE_HEIGHT_CD', 'BecZone', 'SpeciesGroup', 'Age', 'Height', 'Rank', 'FD_PERCENT', 'PL_PERCENT', 'AT_PERCENT', 'Decid_PERCENT')
+forsitedat$TempCode <- paste(forsitedat$PCODE, forsitedat$VRIintersectLayer, sep=".")
 
-alldat <- rbind(atlas[neededcols], bam[neededcols], bbs[neededcols], wsi[neededcols], canfortfl[neededcols], canfortflwsi[neededcols])
+unwantedcodes <- paste(canfortflpcodes, "Forsite_VRI", sep=".")
 
+forsitewanted <- forsitedat[! forsitedat$TempCode %in% unwantedcodes,]
+forsitewanted <- forsitewanted[-65]
+```
+
+Combine forsite data and canfortfl data
+``` {r}
+alldat <- rbind(canforwanted, forsitewanted)
+```
+
+Remove any rows that are missing data for one of the four attributes
+``` {r}
 alldat.hasdat <- alldat[!is.na(alldat$BEC_ZONE_CODE),]
-alldat.hasdat <- alldat[!is.na(alldat$SPECIES_CD_1),]
-alldat.hasdat <- alldat[!is.na(alldat$PROJ_AGE_1),]
-alldat.hasdat <- alldat[!is.na(alldat$PROJ_HEIGHT_1),]
+alldat.hasdat <- alldat.hasdat[!is.na(alldat.hasdat$SPECIES_CD_1),]
+alldat.hasdat <- alldat.hasdat[!is.na(alldat.hasdat$PROJ_AGE_1),]
+alldat.hasdat <- alldat.hasdat[!is.na(alldat.hasdat$PROJ_HEIGHT_1),]
+
 ```
 
 ### Write the data to a file for future use
@@ -344,33 +438,6 @@ alldat.hasdat <- alldat[!is.na(alldat$PROJ_HEIGHT_1),]
 write.table(alldat.hasdat, "data/birdVRIintersect_preprocess1.csv", row.names=F, col.names=T, sep=",")
 ```
 
-### Focus on Distance to Nearest polygon/stand edge
-
-Because we're working with two different VRI shapefiles, some of the point count SSs will have two distances to nearest polygons.. one from the CanforTFL and one from the Forsite "mig birds" VRI file. 
-
-![ ^^^ Image. Example for SS BL2TFL48:Block2:59 and distance to edge to both the CanforTFL layer and the Forsite mig birds layer. NEAR_FID refers to the OBJECT_ID in the polyline shapefile for the VRI shapefiles](../output/DistanceToEdgeExample.jpg)
-
-Here I need to identify those and save only the shortest distance. 
-
-``` {r}
-neededcols2 <- c('SS', 'FID_BIRD', 'FID_VRI', 'VRIintersectLayer', "PCODE", "NEAR_FID", "NEAR_DIST")
-  
-alldat.fordisttoedge <- rbind(atlas[neededcols2], bam[neededcols2], bbs[neededcols2], wsi[neededcols2], canfortfl[neededcols2], canfortflwsi[neededcols2])
-```
-
-`r sum(duplicated(alldat.fordisttoedge$SS))` duplicated SSs. 
 
 
-``` {r}
-dupSS <- alldat.fordisttoedge$SS[duplicated(alldat.fordisttoedge$SS)]
-
-alldat.fordisttoedge.nodups <-  alldat.fordisttoedge[!alldat.fordisttoedge$SS %in% dupSS,]
-alldat.fordisttoedge.dups <-  alldat.fordisttoedge[alldat.fordisttoedge$SS %in% dupSS,]
-
-alldat.fordisttoedge.dups <- alldat.fordisttoedge.dups[order(alldat.fordisttoedge.dups$SS, alldat.fordisttoedge.dups$NEAR_DIST),]
-
-sampleSS <- sample(dupSS, 30)
-
-kable(alldat.fordisttoedge.dups[alldat.fordisttoedge.dups$SS %in% sampleSS,], row.names=F)
-```
 
